implemented team planner
object array created to be used for team planner

--- a/tftbuddy/public/index.html
+++ b/tftbuddy/public/index.html
@@ -19,12 +19,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>TFT Buddy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to view this website.</noscript>
     
     <div id="nav">
+      <button type="submit" id="goto-team-planner">Team Planner</button>
       <input id="search-input" placeholder="Summoner" type="text"><button id="search-button" type="submit">Search</button>
     </div>
 
