adding item page (in progress)

--- a/tftbuddy/public/index.html
+++ b/tftbuddy/public/index.html
@@ -25,8 +25,11 @@
     <noscript>You need to enable JavaScript to view this website.</noscript>
     
     <div id="nav">
-      <button type="submit" id="goto-team-planner">Team Planner</button>
-      <input id="search-input" placeholder="Summoner" type="text"><button id="search-button" type="submit">Search</button>
+      <div id="nav-container">
+        <p>TFT Buddy</p>
+        <button type="submit" id="goto-team-planner">Team Planner</button>
+        <input id="search-input" placeholder="Summoner" type="text"><button id="search-button" type="submit">Search</button>
+      </div>
     </div>
 
     <div id="root"></div>
